[CONS/BE] Added users list logic.